--- a/index.html
+++ b/index.html
@@ -1,147 +1,321 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>VoFo Music</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>VoFo Music | Private Listening</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+    <style>
+        :root {
+            --bg: #0a0a0a;
+            --gold: #c5a367;
+            --soft: #f8f8f8;
+            --muted: #777;
+            --card-bg: rgba(255, 255, 255, 0.02);
+            --heart: #ff4b2b;
+            --ambient-color: rgba(197, 163, 103, 0.15); /* Default */
+        }
 
-<style>
-body{margin:0;background:#0b0b0b;color:#fff;font-family:Inter}
-.hidden{display:none}
-nav{display:flex;justify-content:space-between;padding:20px}
-nav span{margin-left:20px;cursor:pointer}
-nav span.active{color:#c5a367}
-.hero{text-align:center;padding:60px}
-.container{max-width:700px;margin:auto}
-.track{display:flex;gap:15px;padding:15px;background:#141414;border-radius:8px;margin-bottom:10px;cursor:pointer}
-.track img{width:50px;height:50px;border-radius:4px;object-fit:cover}
-.player{position:fixed;bottom:0;width:100%;background:#000;padding:15px;display:flex;gap:15px;align-items:center}
-.player img{width:60px;height:60px}
-.controls button{background:none;border:none;color:#c5a367;font-size:18px;cursor:pointer}
-.like.active{color:red}
-</style>
+        * { box-sizing: border-box; margin: 0; padding: 0; }
+
+        body {
+            background: #0a0a0a;
+            background-image: 
+                radial-gradient(circle at 50% -20%, #222 0%, #0a0a0a 80%);
+            color: var(--soft);
+            font-family: 'Inter', sans-serif;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            overflow-x: hidden;
+            transition: background 1s ease;
+        }
+
+        /* Navigation */
+        nav {
+            display: flex;
+            justify-content: center;
+            gap: 40px;
+            padding: 25px;
+            background: rgba(10, 10, 10, 0.7);
+            backdrop-filter: blur(20px);
+            position: sticky;
+            top: 0;
+            z-index: 2000;
+            border-bottom: 1px solid rgba(255,255,255,0.03);
+        }
+
+        nav span {
+            font-size: 10px;
+            letter-spacing: 3px;
+            text-transform: uppercase;
+            cursor: pointer;
+            color: var(--muted);
+            transition: 0.4s;
+            font-weight: 600;
+        }
+
+        nav span.active { color: var(--gold); }
+
+        .hero {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            padding: 80px 20px;
+        }
+
+        h1 { 
+            font-family: 'Playfair Display', serif; 
+            font-size: clamp(4rem, 12vw, 8rem); 
+            background: linear-gradient(180deg, #fff 30%, rgba(255,255,255,0.2) 100%);
+            -webkit-background-clip: text; 
+            -webkit-text-fill-color: transparent; 
+            margin-bottom: 5px;
+        }
+
+        .sub { font-size: 11px; letter-spacing: .4em; text-transform: uppercase; color: var(--muted); margin-bottom: 60px; }
+
+        .search-box { width: 100%; max-width: 550px; position: relative; z-index: 10; }
+        .search-box input { 
+            width: 100%; padding: 24px; text-align: center; border-radius: 12px; 
+            border: 1px solid rgba(255, 255, 255, 0.08); background: rgba(255, 255, 255, 0.03); 
+            color: white; margin-bottom: 20px; transition: 0.5s; backdrop-filter: blur(10px);
+        }
+        .search-box input:focus { border-color: var(--gold); outline: none; background: rgba(255,255,255,0.06); }
+        .search-box button { width: 100%; padding: 20px; background: var(--gold); border: none; font-weight: 700; text-transform: uppercase; cursor: pointer; border-radius: 8px; }
+
+        #results, #library { width: 100%; max-width: 800px; margin-top: 50px; display: flex; flex-direction: column; gap: 12px; padding-bottom: 220px; }
+
+        .track { 
+            padding: 12px; display: flex; align-items: center; gap: 20px; border-radius: 12px; 
+            background: var(--card-bg); cursor: pointer; transition: 0.3s; border: 1px solid transparent;
+        }
+        .track:hover { background: rgba(255,255,255,0.05); border-color: rgba(197, 163, 103, 0.2); transform: translateY(-2px); }
+        .track img { width: 55px; height: 55px; border-radius: 6px; object-fit: cover; }
+
+        /* Ambient Player */
+        .player-wrap {
+            position: fixed; bottom: 30px; left: 50%; transform: translateX(-50%);
+            width: 95%; max-width: 900px; z-index: 3000;
+        }
+
+        /* The Glow Effect */
+        .ambient-glow {
+            position: absolute; top: 0; left: 0; right: 0; bottom: 0;
+            background: var(--ambient-color);
+            filter: blur(50px);
+            border-radius: 30px;
+            opacity: 0.6;
+            transition: background 1.5s ease;
+            z-index: -1;
+        }
+
+        .player { 
+            background: rgba(10, 10, 10, 0.85); 
+            backdrop-filter: blur(30px); -webkit-backdrop-filter: blur(30px);
+            padding: 20px 30px; display: flex; gap: 25px; align-items: center; 
+            border-radius: 25px; border: 1px solid rgba(255, 255, 255, 0.1); 
+            box-shadow: 0 20px 50px rgba(0,0,0,0.5);
+        }
+
+        #playerThumb { width: 60px; height: 60px; border-radius: 12px; object-fit: cover; box-shadow: 0 8px 20px rgba(0,0,0,0.4); }
+
+        #progress { -webkit-appearance: none; width: 100%; height: 3px; background: rgba(255,255,255,0.1); border-radius: 5px; outline: none; }
+        #progress::-webkit-slider-thumb { -webkit-appearance: none; width: 14px; height: 14px; background: #fff; border-radius: 50%; cursor: pointer; box-shadow: 0 0 10px rgba(255,255,255,0.5); }
+
+        .play-btn { background: #fff; color: #000; border: none; padding: 10px 25px; border-radius: 50px; font-weight: 800; font-size: 10px; cursor: pointer; }
+        .like-icon { font-size: 20px; color: rgba(255,255,255,0.1); cursor: pointer; transition: 0.3s; }
+        .like-icon.active { color: var(--heart); text-shadow: 0 0 15px var(--heart); }
+
+        #visualizer { width: 120px; height: 30px; }
+
+        footer { padding: 80px 20px; background: #050505; text-align: center; border-top: 1px solid #111; }
+        .hidden { display: none !important; }
+        .invisible { opacity: 0; pointer-events: none; transform: translate(-50%, 20px); transition: 0.5s; }
+        .player-wrap.show { opacity: 1; transform: translateX(-50%); }
+
+    </style>
 </head>
-
 <body>
 
-<div id="auth">
-    <h2 align="center">VoFo Login</h2>
-    <input id="user" placeholder="Username"><br><br>
-    <input id="pass" type="password" placeholder="Password"><br><br>
-    <button onclick="login()">Login</button>
-</div>
-
-<div id="app" class="hidden">
-
 <nav>
-    <strong>VoFo</strong>
-    <div>
-        <span id="tabExplore" class="active" onclick="show('explore')">Explore</span>
-        <span id="tabLibrary" onclick="show('library')">Library</span>
-        <span onclick="logout()">Logout</span>
-    </div>
+    <span id="navExplore" class="active" onclick="showTab('explore')">Explore</span>
+    <span id="navLibrary" onclick="showTab('library')">Library</span>
 </nav>
 
-<div id="explore" class="hero">
-    <input id="q" placeholder="Search music">
-    <button onclick="search()">Search</button>
-    <div id="results" class="container"></div>
-</div>
-
-<div id="library" class="hero hidden">
-    <h2>Liked Songs</h2>
-    <div id="libraryResults" class="container"></div>
-</div>
-
-</div>
-
-<div id="player" class="player hidden">
-    <img id="thumb">
-    <div style="flex:1">
-        <div id="title"></div>
-        <div id="artist"></div>
+<div id="exploreTab" class="hero">
+    <h1>VoFo</h1>
+    <div class="sub">Purity in every frequency</div>
+    <div class="search-box">
+        <input id="searchInput" placeholder="Search artist or song..." autocomplete="off">
+        <button onclick="doSearch()">Begin Exploration</button>
     </div>
-    <div class="controls">
-        <button onclick="prev()">⏮</button>
-        <button onclick="shuffle()">🔀</button>
-        <button onclick="toggle()">▶</button>
-        <button onclick="next()">⏭</button>
-        <button onclick="repeat()">🔁</button>
-        <span id="like" class="like" onclick="toggleLike()">❤</span>
+    <div id="results"></div>
+</div>
+
+<div id="libraryTab" class="hero hidden">
+    <h1>Library</h1>
+    <div class="sub">Your private collection</div>
+    <div id="library"></div>
+</div>
+
+<div class="player-wrap invisible" id="playerWrap">
+    <div class="ambient-glow" id="glow"></div>
+    <div class="player">
+        <img id="playerThumb" src="" alt="">
+        <div style="flex:1; display:flex; flex-direction:column; gap:12px;">
+            <div style="display:flex; justify-content:space-between; align-items:center;">
+                <div>
+                    <div id="trackTitle" style="font-weight:700; font-size:15px; color:#fff; margin-bottom:2px;"></div>
+                    <div id="trackArtist" style="font-size:10px; color:var(--muted); text-transform:uppercase; letter-spacing:1px;"></div>
+                </div>
+                <div style="display:flex; align-items:center; gap:20px;">
+                    <canvas id="visualizer"></canvas>
+                    <span id="likeBtn" class="like-icon" onclick="toggleLike()">❤</span>
+                </div>
+            </div>
+            <input type="range" id="progress" value="0" min="0" max="100" step="0.1">
+            <div style="display:flex; justify-content:space-between; align-items:center;">
+                <button class="play-btn" id="playBtn" onclick="handlePlayPause()">PAUSE</button>
+                <div style="font-size:10px; color:var(--gold); font-family:monospace;" id="timeDisplay">0:00 / 0:00</div>
+                <input type="range" id="volume" min="0" max="1" step="0.01" value="0.8" style="width:60px; accent-color:#fff;">
+            </div>
+        </div>
     </div>
 </div>
+
+<footer>
+    <div style="color:var(--gold); font-family:'Playfair Display'; font-size:2rem; margin-bottom:10px;">VoFo Music</div>
+    <p style="color:#444; font-size:13px; margin-bottom:30px;">A private high-fidelity music experience built for purity of sound.</p>
+    <div style="font-size:10px; color:#333; letter-spacing:2px; text-transform:uppercase;">
+        © 2026 VOFO MUSIC · ENGINEERED BY ABHIRAM · PLBYZ
+    </div>
+</footer>
 
 <script>
-const audio=new Audio()
-let list=[],index=0,liked=[],shuffleOn=false,repeatOn=false
+    const audio = new Audio();
+    audio.crossOrigin = "anonymous";
+    let hls = null, currentSong = null, currentQueue = [];
+    let likedSongs = JSON.parse(localStorage.getItem('vofo_likes')) || [];
+    let audioCtx, analyser, dataArray, canvas, ctx;
 
-async function login(){
-    const r=await fetch('/api/auth/login',{method:'POST',headers:{'Content-Type':'application/json'},
-    body:JSON.stringify({username:user.value,password:pass.value})})
-    if((await r.json()).success){
-        auth.classList.add('hidden')
-        app.classList.remove('hidden')
-        loadLibrary()
+    function initVisualizer() {
+        if (audioCtx) return;
+        audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+        analyser = audioCtx.createAnalyser();
+        const source = audioCtx.createMediaElementSource(audio);
+        source.connect(analyser);
+        analyser.connect(audioCtx.destination);
+        analyser.fftSize = 64;
+        dataArray = new Uint8Array(analyser.frequencyBinCount);
+        canvas = document.getElementById("visualizer");
+        ctx = canvas.getContext("2d");
+        draw();
     }
-}
 
-async function logout(){await fetch('/api/auth/logout');location.reload()}
+    function draw() {
+        requestAnimationFrame(draw);
+        analyser.getByteFrequencyData(dataArray);
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        const barWidth = 4;
+        let x = 0;
+        for (let i = 0; i < dataArray.length; i++) {
+            const barHeight = dataArray[i] / 8;
+            ctx.fillStyle = `rgba(255, 255, 255, ${barHeight/20})`;
+            ctx.fillRect(x, canvas.height - barHeight, barWidth, barHeight);
+            x += barWidth + 4;
+        }
+    }
 
-function show(t){
-    explore.classList.toggle('hidden',t!=='explore')
-    library.classList.toggle('hidden',t!=='library')
-    tabExplore.classList.toggle('active',t==='explore')
-    tabLibrary.classList.toggle('active',t==='library')
-    if(t==='library')loadLibrary()
-}
+    async function playSong(song, queue) {
+        initVisualizer();
+        if (audioCtx.state === 'suspended') audioCtx.resume();
+        currentSong = song; currentQueue = queue;
+        const wrap = document.getElementById("playerWrap");
+        wrap.classList.remove("invisible");
+        document.getElementById("trackTitle").innerText = song.title;
+        document.getElementById("trackArtist").innerText = song.artist;
+        document.getElementById("playerThumb").src = song.thumbnail;
+        
+        // Dynamic Glow Logic
+        document.getElementById("glow").style.background = `radial-gradient(circle, ${getRandomColor()} 0%, transparent 70%)`;
 
-async function search(){
-    const r=await fetch('/api/search?q='+q.value)
-    render(await r.json(),results)
-}
+        try {
+            const res = await fetch("/api/play", { method: "POST", headers: {"Content-Type": "application/json"}, body: JSON.stringify({url: song.id}) });
+            const data = await res.json();
+            if (hls) hls.destroy();
+            if (Hls.isSupported() && data.stream_url.includes(".m3u8")) {
+                hls = new Hls(); hls.loadSource(data.stream_url); hls.attachMedia(audio);
+                hls.on(Hls.Events.MANIFEST_PARSED, () => audio.play());
+            } else { audio.src = data.stream_url; audio.play(); }
+            document.getElementById("playBtn").innerText = "PAUSE";
+        } catch(e) { console.error(e); }
+        updateLikeUI();
+    }
 
-async function loadLibrary(){
-    const r=await fetch('/api/library')
-    liked=await r.json()
-    render(liked,libraryResults)
-}
+    function getRandomColor() {
+        const colors = ['rgba(197, 163, 103, 0.4)', 'rgba(67, 103, 197, 0.4)', 'rgba(197, 67, 67, 0.4)', 'rgba(67, 197, 103, 0.4)'];
+        return colors[Math.floor(Math.random() * colors.length)];
+    }
 
-function render(arr,el){
-    el.innerHTML=''
-    arr.forEach((s,i)=>{
-        const d=document.createElement('div')
-        d.className='track'
-        d.innerHTML=`<img src="${s.thumbnail}"><div><div>${s.title}</div><div>${s.artist}</div></div>`
-        d.onclick=()=>play(arr,i)
-        el.appendChild(d)
-    })
-}
+    function handlePlayPause() {
+        if (audio.paused) { audio.play(); document.getElementById("playBtn").innerText = "PAUSE"; }
+        else { audio.pause(); document.getElementById("playBtn").innerText = "PLAY"; }
+    }
 
-async function play(arr,i){
-    list=arr;index=i
-    const s=arr[i]
-    player.classList.remove('hidden')
-    title.innerText=s.title;artist.innerText=s.artist;thumb.src=s.thumbnail
-    const r=await fetch('/api/play',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({url:s.id})})
-    audio.src=(await r.json()).stream_url
-    audio.play()
-}
+    async function doSearch() {
+        const q = document.getElementById("searchInput").value;
+        if(!q) return;
+        const res = await fetch(`/api/search?q=${encodeURIComponent(q)}`);
+        const data = await res.json();
+        renderTracks(data, "results");
+    }
 
-audio.onended=()=>setTimeout(()=>repeatOn?play(list,index):next(),1000)
+    function renderTracks(data, divId) {
+        const container = document.getElementById(divId);
+        container.innerHTML = "";
+        data.forEach(song => {
+            const div = document.createElement("div");
+            div.className = "track";
+            div.innerHTML = `<img src="${song.thumbnail}"><div class="track-meta"><div>${song.title}</div><div>${song.artist}</div></div>`;
+            div.onclick = () => playSong(song, data);
+            container.appendChild(div);
+        });
+    }
 
-function next(){index=shuffleOn?Math.random()*list.length|0:(index+1)%list.length;play(list,index)}
-function prev(){index=(index-1+list.length)%list.length;play(list,index)}
-function toggle(){audio.paused?audio.play():audio.pause()}
-function shuffle(){shuffleOn=!shuffleOn}
-function repeat(){repeatOn=!repeatOn}
+    function toggleLike() {
+        const index = likedSongs.findIndex(s => s.id === currentSong.id);
+        if(index > -1) likedSongs.splice(index, 1);
+        else likedSongs.push(currentSong);
+        localStorage.setItem('vofo_likes', JSON.stringify(likedSongs));
+        updateLikeUI();
+    }
 
-async function toggleLike(){
-    const s=list[index]
-    await fetch('/api/like',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(s)})
-    loadLibrary()
-}
+    function updateLikeUI() {
+        const isLiked = likedSongs.some(s => s.id === currentSong.id);
+        document.getElementById("likeBtn").classList.toggle('active', isLiked);
+    }
+
+    function showTab(tab) {
+        document.getElementById('exploreTab').classList.toggle('hidden', tab !== 'explore');
+        document.getElementById('libraryTab').classList.toggle('hidden', tab !== 'library');
+        document.getElementById('navExplore').classList.toggle('active', tab === 'explore');
+        document.getElementById('navLibrary').classList.toggle('active', tab === 'library');
+        if(tab === 'library') renderTracks(likedSongs, "library");
+    }
+
+    audio.ontimeupdate = () => {
+        if (audio.duration) {
+            document.getElementById("progress").value = (audio.currentTime / audio.duration) * 100;
+            document.getElementById("timeDisplay").innerText = `${Math.floor(audio.currentTime/60)}:${Math.floor(audio.currentTime%60).toString().padStart(2,'0')} / ${Math.floor(audio.duration/60)}:${Math.floor(audio.duration%60).toString().padStart(2,'0')}`;
+        }
+    };
+
+    document.getElementById("progress").oninput = () => audio.currentTime = (document.getElementById("progress").value / 100) * audio.duration;
+    document.getElementById("volume").oninput = () => audio.volume = document.getElementById("volume").value;
 </script>
-
 </body>
 </html>
